# python-playground

./: .gitignore  pyproject.toml  trial.ipynb  trial.py
2048/: 2048.py  README.md
advent-of-code/day01/: day01-1.py  day01-2.py
advent-of-code/day02/: day02-1.py  day02-2.py
advent-of-code/day03/: day03-1.py  day03-2.py
advent-of-code/day04/: day04-1.py  day04-2.py
advent-of-code/day05/: day05-1.py  day05-2.py
advent-of-code/day06/: day06-1.py  day06-2.py
advent-of-code/day07/: day07-1.py  day07-2.py
advent-of-code/day08/: day08-1.py  day08-2.py
advent-of-code/day09/: day09-1.py  day09-2.py
advent-of-code/day10/: day10-1.py  day10-2.py
advent-of-code/day11/: day11-1.py  day11-2.py
connect-four/: connect-four.py
cross-n-zero/: README.md  cross-n-zero.py
spotify-data/: legacy-spotify.ipynb  output.txt  spotify.py
stock-analysis/: peak.ipynb  sensex-01012022-31122022-d.csv  sensex-01041979-31122023d.csv
stock-price-fetch/: .gitignore  config.json  main.py  pyproject.toml  readme.md
