[tool.poetry]
name = "standard"
version = "0.0.0"
description = "python playground"
authors = ["pogger ez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.26.1"
readchar = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
