[tool.poetry]
name = "standard"
version = "0.0.0"
description = "python playground"
authors = ["pogger ez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
ipykernel = "^6.27.1"
numpy = "^1.26.1"
pandas = "^2.1.3"
tqdm = "^4.66.2"
tabulate = "^0.9.0"
readchar = "^4.0.5"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
