[tool.poetry]
name = "get-stock-price"
version = "0.0.0"
description = "get stock price"
authors = ["poggerez <jinayvora101@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
yfinance = "^0.2.33"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
